# pjt-sprint_ai07_bidmateRAG

./: +실험결과_b_종합보고서.md  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  P1_C1_F1_S1_T1.md  P2_C2_F2_S2_T2.md  P3_C2_F3_S2_T3.md  P3_C3_F3_S3_T3.md  P3_C3_F3_S3_T5.md  P4_C4_F4_S4_T4.md  README.md  bench-b45-rank-11-30.jsonl  bench-b45-rank-11-30.meta.json  clean.py  csvs.txt  final_experiment_comparison.ipynb  fix.py  package-lock.json  package.json  pyproject.toml  scenario_a_comparison_report.ipynb  test_cli_readme.md  test_cli_readme2.md  생성_품질_지표_분석.ipynb
_chroma_zip_probe/__MACOSX/: ._chroma_db
_chroma_zip_probe/chroma_db/: chroma.sqlite3
app/: CLAUDE.md  eval_ui.py  main.py
app/api/: routes.py
configs/: pricing.yaml  retrieval.yaml  retrieval_align_scenario_a.yaml  web.yaml
configs/chunking/: chunking_1000_150.yaml  chunking_1500_200.yaml  chunking_500_100.yaml  chunking_semantic_percentile.yaml
configs/data_quality/: duplicates_map.csv  project_alias_map.csv
docs/: CLAUDE.md  architecture.md  decision-log.md  index.html  readme.md
docs/PPT/: 대본_초안.md  (+37 more)
scratch/: REPORT_V09_Part2.md  REPORT_V09_Part3.md  extract_10_cases.py  extract_cases.py  extract_table_part2.py  gen_report.py
scripts/: build_all_chunking_indexes.py  build_calculation_store.py  build_document_quality_report.py  build_index.py  compare_runs.py  eval_peft.py  generate_report.py  ingest_data.py  rank_prompt_difficulty_from_bench_jsonl.py  run_eval.py  run_experiment.py  run_rag.py  run_web.sh  train_peft.py
src/: CLAUDE.md
web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
마지막 그래프 그릴거/: 2026-04-20_1258_ad-hoc_google-gemma-4-E4B-it.md  2026-04-20_1330_ad-hoc_google-gemma-4-E4B-it.md  2026-04-20_1503_ad-hoc_gpt-5-mini.md  2026-04-20_1509_ad-hoc_gpt-5-mini.md
(+269 files in other folders)
